don't call Disconnect() if the connection had been already lost (closes #10747) [backport of r60568 from trunk]

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_9_0_BRANCH@60569 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775